--- a/index.html
+++ b/index.html
@@ -1,23 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">	
  <head>
- 	<meta charset="utf-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Jhon Michael</title>
-    <!-- CSS Files
-	========================================================= -->
-    <!-- Theme Styles -->
+    <!-- CSS Files -->
+    <!-- Estilos.css -->
     <link rel="stylesheet" type="text/css" href="resources/css/estilos.css">
-    <!-- /Theme Styles --> 
-    <!-- Bootstrap CSS -->
-    <!--<link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.min.css">-->
-    <!-- /Bootstrap CSS -->
-    
-    <!-- Favicon Icon
-  	========================================================= -->
+    <!-- /Estilos.css -->   
+    <!-- CSS Files --> 
+    <!-- Favicon Icon -->
     <link rel="icon" href="resources/pictures/curriculum-vitae.ico">
-  	<!-- /Favicon
-  	========================================================= -->
+    <!-- /Favicon
     <!-- añadir un enlace anclado a un punto de una misma pagina en html5. Primer paso -->
     <style type="text/css">   
 	  a:link{   
