--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Jhon Michael</title>
-    <!-- CSS Files -->
     <!-- Estilos.css -->
     <link rel="stylesheet" type="text/css" href="resources/css/estilos.css">
     <!-- /Estilos.css -->   
-    <!-- CSS Files --> 
     <!-- Favicon Icon -->
     <link rel="icon" href="resources/pictures/curriculum-vitae.ico">
     <!-- /Favicon
@@ -171,7 +169,7 @@
                 <h3 class="subtitulo"><i class="icono-lista-trabajo"></i>diebold colombia s.a -<span class="fecha-de-graduacion"> Dic 2015 - Jun 2016</span></h3>
                 <h4>auxiliar de apoyo de ingeniero back office</h4>
                 <h5>Tipo experiencia laboral: Pasantía o Práctica Laboral</h5>
-                <p class="parrafo">Funciones y logros</p>
+                <p>Funciones y logros</p>
                 <ul class="list-style"> 
                   <li>Recopilar datos del diseño y ejecución del almacenamiento de datos acerca del proceso de
         creación, configuración y cargue masivo de cajeros automáticos.</li>
