--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Curriculum Vitae</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,100' rel='stylesheet' type='text/css'>
-	<link href="style.css" type="text/css" rel="stylesheet">
+	  <link href="style.css" type="text/css" rel="stylesheet">
   </head>
 
   <body>
@@ -26,8 +26,11 @@
     
     <section>
       <article class="profile" id="profile">
-        <div class="container">
+        <div class="container" align="center">
           <img src="img/profile-pic.jpg" height="272">
+        </div>
+
+	      <div class="container">
           <h1>profile</h1> 
             <p>En este espacio del currículo resalta lo académico y profesional y, preferiblemente, cosas medibles. (ejemplo: administrador de empresas, bilingüe, con tantos años de experiencia, y en qué tipos de empresa ha trabajado.)<br /> <br /> En el perfil profesional primero debe ir la parte académica y luego comenzar a hablar de la experiencia que se tiene. Pon información tangible, concreta. Si el seleccionador no puede medir o comprobar la información, podrá pensar cualquier cosa o hacer interpretaciones equivocadas. Se aconseja escribir el perfil profesional en primera persona. <br /> <br /> ¿Qué es lo que no debes poner? <br /> <br /> “No puedes poner, por ejemplo, que eres alguien orientado al logro, o cosas que no sean medibles ni comprobables, como que eres honesto y buena persona. Esos son cualidades y valores que no se pueden demostrar por lo menos en primera instancia”. <br /> <br /> Software Programming Technician in ability to perform analysis and programming in <strong>JAVA</strong> language. <br /> <br />Técnico en Programación de Software en capacidad de realizar análisis y programación en lenguaje JAVA, con conocimientos básicos en bases de datos en SQL Server. Con capacidad analítica, aprendizaje continuo, recursividad, organización y orientación al logro.</p>
         </div>
