--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section>
       <article class="profile" id="profile">
         <div class="container" align="center">
-          <img src="img/profile-pic.jpg" height="272">
+          <img src="img/profile-pic.jpg">
         </div>
 
 	      <div class="container">
