--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
     </section>
 
-	<section class="slider-bar">
+	<section class="portfolio-slider">
 	
 		<div class="slideshow">
 			<ul class="slider">
